# EyeIT

./: ActivityDiagram.xml  Proposal-prototype.docx  Proposal.docx  README.md  Thumbs.db  references
Code/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  Code.kdev4  NavigationUtils.cpp  NavigationUtils.h  Navigation_Utils.h  Object_Recognition.cpp  Object_Recognition.h  ObstacleManager.cpp  ObstacleManager.h  camera_utils.cpp  camera_utils.h  displaymanager.cpp  displaymanager.h  imageprocessing.cpp  imageprocessing.h  main.cpp  processingmanager.cpp  processingmanager.h
Code/Backups/ZR300Utils/: samples.kdev4
Code/Backups/realsense_utils/release/samples/: Makefile  cmake_install.cmake
Code/Backups/realsense_utils/release/samples/or_tutorial_1/: cmake_install.cmake  sample_or_tutorial_1
Code/Backups/realsense_utils/release/samples/or_tutorial_2/: Makefile
Code/Backups/realsense_utils/release/samples/or_tutorial_3/: Makefile
Code/Backups/realsense_utils/release/samples/pt_tutorial_2/: Makefile  cmake_install.cmake  sample_pt_tutorial_2
Code/Backups/realsense_utils/release/samples/pt_tutorial_3/: Makefile  sample_pt_tutorial_3
Code/Backups/realsense_utils/release/samples/slam_tutorial_1/: cmake_install.cmake
Code/tools/offlineReader/: CMakeLists.txt  main.cpp
Images/Original_Images/: Thumbs.db
Images/Processed_Images/GroundMap_Process/: Thumbs.db
Images/Processed_Images/SeedMap_Process/: Thumbs.db
Images/Processed_Images/Vdisparity_Process/: Thumbs.db
code_snippets/ZR300Utils/.kdev4/: samples.kdev4
code_snippets/realsense_utils/release/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
code_snippets/realsense_utils/release/samples/or_tutorial_1/: Makefile
code_snippets/realsense_utils/release/samples/or_tutorial_2/: cmake_install.cmake  sample_or_tutorial_2
code_snippets/realsense_utils/release/samples/or_tutorial_3/: cmake_install.cmake  sample_or_tutorial_3
code_snippets/realsense_utils/release/samples/pt_tutorial_1/: Makefile  cmake_install.cmake  sample_pt_tutorial_1
code_snippets/realsense_utils/release/samples/pt_tutorial_3/: cmake_install.cmake
code_snippets/realsense_utils/release/samples/slam_tutorial_1/: Makefile  sample_slam_tutorial_1
proposal/: EntityDiagram.xml  Proposal-prototype.docx  Proposal.docx  SequenceDiagram.html  Thumbs.db  תוכנית בדיקות.docx
report/: Algorithm - עותק.docx  Algorithm.docx  Concepts.docx  collition_detection.docx  navigation.docx  בדיקות_OR.docx  בדיקות_הפרדת_קרקע.docx  בדיקות_מכשולים.docx  בדיקות_ניווט.docx  מסקנות.docx  תודות.docx  תקציר בעברית.docx
